--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Ari's Cosmetics   </title>
+  <title>Ari's Cosmetics </title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,20 +15,23 @@
   </style>
 </head>
 <body>
-
+<!-- nav bar  -->
   <!-- nav section Nick -->
-  <section>
-    <nav> 
-      <li>Pricing</li>
-      <li>Product</li>
-      <li>About Us</li>
-      <li>Careers</li>
-      <li>  Community
-      </li>
-    </nav>
-  </section>
-
+  
+<!-- flex contaiiner -->
+<!-- logo  -->
 <!-- header section  JDavid -->
+<div>
+  <img src="/images/logo.svg" alt="">
+</div>
+<div>
+  <li>Pricing</li>
+  <li>Product</li>
+  <li>About Us</li>
+  <li>Careers</li>
+  <li>  Community
+  </li> 
+</div>
 
   <section>
     <h1>   Bring everyone together to build better products.
@@ -41,8 +44,12 @@
       Get Started
     </button>
   </section>
-  
+  <!-- menu items -->
+<div>
+  a*5
 
+
+</div>
 
 <!-- section 1 Ahamad  -->
 
