--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- logo  -->
 <!-- header section  JDavid -->
 <div>
-  <img src="/images/logo.svg" alt="">
+  <img src="./images/logo.svg" alt="">
 </div>
 <div>
   <li>Pricing</li>
